--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Koyuncuoğlu Saatcilik</title>
 
   <!-- fontlar -->
@@ -61,7 +62,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <h2 class="başlık">Kalitenin bir numaralı adresi artık sadece kolunuzda değil aynı zamanda cebinizde.</h2>
           <button type="button" class="btn btn-dark btn-lg indirmebutonu indirme-butonu-ios">🍎 IOS</button>
           <button type="button" class="btn btn-dark btn-lg indirmebutonu">▶ Android</button>
